--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- saved from url=(0058)file:///Users/admin/Desktop/html%20crypt/index%20copy.html -->
+
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <title>HTML CRYPT</title>
   <link rel="SHORTCUT ICON" href="/favicon.ico">
@@ -153,7 +153,7 @@ function Preview(selection) {
 <br>
 
 <p>Questions? Feel free to leave Extraterrestrial feedback</p>
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xjvqnqow" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">Full Name</label>
     <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
