--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  <title>HTML CRYPT</title>
-  <link rel="SHORTCUT ICON" href="/favicon.ico">
+<html>
+    <head>
+        <link rel="icon" href="/favicon.ico" sizes="any">
+           <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+  <title>html</title>
   <meta name="description" content="Encrypt HTML with javascipt functions">
   <meta name="keywords" content="HTML encryption, HTML decryption">
 
@@ -93,17 +96,16 @@ function Preview(selection) {
 <hr>
 
 
-   <center><h1>HTML<a href="https://html.sudo-self.com/"><img src="1.jpg" alt="1" border="0"></a>
-    <font color="#205070"><b>Cryptic Coder</b></font></h1>
+   <center><h1>html
+    <font color="#205070"><b><code>Cryptic Coder</code></b></font></h1>
 
    </center>
 <table align="center" width="95%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr><td colspan="3">
-<center><font size="+1" color="#205070"><a style="color:rgb(2, 17, 78)">Protect your html templates from casual theft, prevent your code from being copied by bots, and safegaurd your information.</a></font></center><font size="+1" color="#205070">
+<center><font size="+1" color="#205070"><a style="color:rgb(2, 17, 78)">Protect your html templates and prevent your code from being copied by bots.</a></font></center><font size="+1" color="#205070">
 <br><br>
-<font size="-1">This tool runs Javascript so use with certain browsers may have some negative outcomes. Other non java tools may not work to decrypt.<br>
-  This tool is not for circumventing anything. It saves no data of any kind. If for any reason its not working. Try refreshing the browser.<br>
-  If a &nbsp;<a href="https://html.sudo-self.com/">REFRESH</a>&nbsp; doesnt work, an offline copy is avaliable for download here:&nbsp;<a href="https://github.com/sudo-self/html-encoder/releases/tag/html">sudo-self encoder.</a>
+<font size="-1">This tool runs Javascript so use with certain browsers may have some negative outcomes. Other non-java tools may not work to decrypt.<br>
+  This tool is not for circumventing anything. It saves no data of any kind. If for any reason its not working. Try refreshing the browser.<br></a>
   
   </font></font>
   
@@ -152,15 +154,14 @@ function Preview(selection) {
 </center>
 <br>
 
-<p>Questions? Feel free to leave Extraterrestrial feedback</p>
 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xjvqnqow" method="post">
   <fieldset id="fs-frm-inputs">
-    <label for="full-name">Full Name</label>
-    <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
-    <label for="email-address">Email Address</label>
-    <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
-    <label for="message">Message</label>
-    <textarea rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
+    <label for="full-name"></label>
+    <input type="text" name="name" id="full-name" placeholder="name" required="">
+    <label for="email-address"></label>
+    <input type="email" name="_replyto" id="email-address" placeholder="tech@jessejesse.com" required="">
+    <label for="message"></label>
+    <textarea rows="5" name="message" id="message" placeholder="message" required=""></textarea>
     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
   </fieldset>
   <input type="submit" value="Submit">
@@ -195,7 +196,7 @@ function Preview(selection) {
   align-items: baseline;
 }
 
-/* border, padding, margin, width */
+
 #fs-frm input,
 #fs-frm select,
 #fs-frm textarea,
@@ -255,7 +256,7 @@ function Preview(selection) {
   appearance: radio;
 }
 
-/* address, locale */
+
 #fs-frm fieldset.locale input[name="city"],
 #fs-frm fieldset.locale select[name="state"],
 #fs-frm fieldset.locale input[name="postal-code"] {
@@ -273,5 +274,4 @@ function Preview(selection) {
   margin-right: 3%;
 }
 </style>
-
-<a href="https://html.sudo-self.com/"><img src="1.jpg" alt="1" border="0"></a></body></html>
+</body></html>
