--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="manifest" href="/manifest.json" />
-    <!--email_off-->contact@example.com<!--/email_off-->
+    <!--email_off--tech@jessejesse.com--/email_off-->
     <title>HTML Encrypt</title>
 </head>
     <style>
